# codesearch

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  TASK_2_COMPLETION_REPORT.md  TASK_3_COMPLETION_REPORT.md  TASK_4_COMPLETION_REPORT.md  TASK_5_COMPLETION_REPORT.md  pyproject.toml  setup.py
codesearch/: __init__.py  models.py
codesearch/benchmarks/: __init__.py  performance.py  quality.py  runner.py
codesearch/caching/: __init__.py  ast_cache.py  cache.py  cleanup.py  embedding_cache.py  invalidation.py
codesearch/cli/: __init__.py  commands.py  config.py  formatting.py  help.py  interactive.py  main.py
codesearch/data_ingestion/: __init__.py  audit.py  deduplication.py  models.py  pipeline.py  validation.py
codesearch/embeddings/: __init__.py  batch_generator.py  config.py  generator.py  mlx.py  text_preparator.py  validator.py  voyage.py
codesearch/indexing/: __init__.py  error_handler.py  errors.py  incremental.py  recovery.py  repository.py  scanner.py
codesearch/lancedb/: __init__.py  backup.py  client.py  entities.py  initialization.py  metadata.py  migrations.py  models.py  optimization.py  pool.py  relationships.py  statistics.py
codesearch/parsers/: __init__.py  base.py  python_parser.py
codesearch/query/: __init__.py  engine.py  exceptions.py  filters.py  models.py
config/: config.yaml.example  embedding_models.yaml
docs/: API.md  ARCHITECTURE.md  CLI.md  IMPLEMENTATION_GUIDE.md  INSTALLATION.md  MLX.md  TROUBLESHOOTING.md
docs/plans/: 2025-11-01-batch-embedding-generation-design.md  2025-11-01-embedding-model-selection-design.md  2025-11-01-embedding-quality-assurance-design.md  2025-11-01-issue-5-implementation.md  2025-11-01-issue-6-implementation.md  2025-11-01-issue-7-implementation.md  2025-11-01-issue-8-embedding-quality-implementation.md  2025-11-01-text-preparation-design.md  2025-11-03-query-infrastructure-design.md
tests/: __init__.py  test_batch_embedding_generator.py  test_call_graph.py  test_embedding_generator.py  test_embedding_validator.py  test_lancedb_client.py  test_lancedb_models.py  test_lancedb_operations.py  test_python_parser.py  test_repository_scanner.py  test_text_preparator.py
tests/benchmarks/: __init__.py  test_mlx_benchmarks.py  test_performance.py  test_quality.py  test_runner.py
tests/caching/: test_ast_cache.py  test_cache.py  test_cleanup.py  test_embedding_cache.py  test_invalidation.py
tests/cli/: test_commands.py  test_config.py  test_formatting.py  test_framework.py  test_integration.py  test_interactive.py  test_main.py  test_repository_commands.py
tests/data_ingestion/: test_audit.py  test_deduplication.py  test_integration.py  test_metadata.py  test_models.py  test_performance.py  test_pipeline.py  test_relationships.py  test_validation.py
tests/embeddings/: test_config.py  test_generator.py  test_mlx_generator.py  test_voyage.py
tests/indexing/: test_errors.py  test_incremental.py  test_indexing_integration.py  test_recovery.py  test_repository.py
tests/lancedb/: test_database_management.py
tests/parsers/: test_python_parser.py
tests/query/: test_engine.py  test_filters.py  test_integration.py  test_models.py  test_performance.py
